# e7geu

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  flake.nix  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
apps/web/: package.json  uno.config.ts  vite.config.ts
apps/web/patches/: @undecaf__barcode-detector-polyfill.patch
apps/web/src/: app.css  app.html  service-worker.ts
apps/web/src/lib/apps/: catalog.ts
apps/web/src/lib/browser/: camera.test.ts  camera.ts  color-inspector.test.ts  color-inspector.ts  geolocation.test.ts  geolocation.ts  qr-generator.ts  qr-scanner.test.ts  qr-scanner.ts  sound-meter.ts
apps/web/src/lib/domain/: color.test.ts  color.ts  qr-history.test.ts  qr-history.ts  sound.test.ts  sound.ts  speed.test.ts  speed.ts
apps/web/src/lib/ui/: AppHeader.svelte  AppIcon.svelte
apps/web/src/routes/: +layout.svelte  +page.svelte  recent.test.ts  recent.ts  search.test.ts  search.ts
apps/web/src/routes/apps/arcana/: +page.svelte  Card.svelte  game.test.ts  game.ts  room.test.ts  room.ts  transport.test.ts  transport.ts
apps/web/static/: manifest.webmanifest
apps/web/static/ai/u2netp/: config.json  preprocessor_config.json
apps/web/static/iroh/: arcana_iroh.d.ts  arcana_iroh.js  arcana_iroh_bg.wasm  arcana_iroh_bg.wasm.d.ts  collaboration_iroh.d.ts  collaboration_iroh.js  collaboration_iroh_bg.wasm  collaboration_iroh_bg.wasm.d.ts
crates/arcana-iroh/: Cargo.toml  README.md
crates/arcana-iroh/src/: lib.rs
crates/collaboration-iroh/: Cargo.toml  README.md
crates/collaboration-iroh/src/: lib.rs
docs/research/: background-removal.md  berlin-work-cafes.md  german-calendar-data.md  iroh-collaboration.md  stack.md
e2e/: background-remover.spec.ts  collaboration.spec.ts
(+65 files in other folders)
