[package]
name = "arcana-iroh"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
n0-future = "0.3"
n0-error = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tokio = { version = "1", default-features = false, features = ["io-util", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
