[package]
name = "collaboration-iroh"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
bytes = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
iroh-blobs = { version = "0.103", default-features = false }
iroh-gossip = { version = "0.101", default-features = false, features = ["net"] }
iroh-tickets = "1"
js-sys = "0.3"
n0-future = "0.3"
postcard = "1"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tokio = { version = "1", default-features = false, features = ["sync"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
